fixed overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -50,6 +50,7 @@ body {
 main {
    flex: 4;
    height: 100vh;
+   overflow: scroll;
    display: flex;
    flex-direction: column;
    background-color: beige;
